src/test/deca/context/invalid/langage_essentiel/premiere_passe/regle_1_3_1.deca
// Description:
//    regle 1.3 opération partielle env _types(super)
//
// Resultats:
//    Ligne 6: Undeclared super class identifier : 'B'.
class A extends B  {
}
// raison : opération partielle env _types(super)
//        	message : “undeclared super class identifier”
